--- a/content/post/2018-07-02-semantic-versioning-for-data-science-models.Rmd
+++ b/content/post/2018-07-02-semantic-versioning-for-data-science-models.Rmd
@@ -3,8 +3,8 @@ title: Semantic Versioning for Data Science Models
 author: ~
 date: '2018-07-02'
 slug: semantic-versioning-for-data-science-models
-categories: []
-tags: []
+categories: ['data science']
+tags: ['github', 'data science pipelines', 'software engineering']
 ---
 
 If you've ever wanted to tag your data science model, you've probably wondered how to version it. Which will it be: vx.4.1, v34.1231.51.21, or v91.x4.dev34? After reading about _semantic versioning_, I propose a method for versioning data science models.
