--- a/content/post/2017-10-19-buying-a-used-car-the-data-science-way.Rmd
+++ b/content/post/2017-10-19-buying-a-used-car-the-data-science-way.Rmd
@@ -8,6 +8,7 @@ tags: ['r', 'regression']
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning=F)
+install.load::install_load('dplyr')
 ```
 
 So you want to buy a car, but you don't know anything about them? Welcome to my life. 
