--- a/content/post/2017-02-10-ggplot-plotly.Rmd
+++ b/content/post/2017-02-10-ggplot-plotly.Rmd
@@ -6,6 +6,10 @@ categories: ['dataviz']
 tags: ['ggplot2', 'r', 'plotly']
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning=F)
+install.load::install_load('plotly', 'ggplot2')
+```
 R users fall in love with ```ggplot2```, the growing standard for data visualization in R. The ability to quickly vizualize trends, and customize just about anything you'd want, make it a powerful tool. Yet this week, I made a discvoery that may reduce how much I used ```ggplot2```. Enter ```plot_ly()```. 
 
 For this post, I assume that you have a working knowledge of the ```dplyr``` (or ```magrittr```) and ```ggplot2``` packages. I caveat that this post is backed with only 4-5 hours using ```plotly()```, so some statements here may not be fully vetted.
