--- a/data/201809-college-football/scrape-college-football.ipynb
+++ b/data/201809-college-football/scrape-college-football.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1028,77 +1028,242 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>5</th>\n",
        "      <td>L</td>\n",
-       "      <td>Sat, October 7</td>\n",
-       "      <td>3 - 42</td>\n",
-       "      <td>Utah St</td>\n",
-       "      <td>Provo, UT</td>\n",
-       "      <td>1922</td>\n",
+       "      <td>Fri, October 6</td>\n",
+       "      <td>7 - 24</td>\n",
+       "      <td>Boise St</td>\n",
+       "      <td>LaVell Edwards Stadium - Provo, UT</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>L</td>\n",
+       "      <td>Sat, October 14</td>\n",
+       "      <td>10 - 35</td>\n",
+       "      <td>Mississippi St</td>\n",
+       "      <td>Davis Wade Stadium - Starkville, MS</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>L</td>\n",
+       "      <td>Sat, October 21</td>\n",
+       "      <td>17 - 33</td>\n",
+       "      <td>East Carolina</td>\n",
+       "      <td>Dowdy-Ficklen Stadium - Greenville, NC</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>W</td>\n",
+       "      <td>Sat, October 28</td>\n",
+       "      <td>41 - 20</td>\n",
+       "      <td>San Jose St</td>\n",
+       "      <td>LaVell Edwards Stadium - Provo, UT</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>L</td>\n",
+       "      <td>Sat, November 4</td>\n",
+       "      <td>13 - 20</td>\n",
+       "      <td>Fresno St</td>\n",
+       "      <td>Bulldog Stadium (CA) - Fresno, CA</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>W</td>\n",
+       "      <td>Fri, November 10</td>\n",
+       "      <td>31 - 21</td>\n",
+       "      <td>UNLV</td>\n",
+       "      <td>Sam Boyd Stadium - Las Vegas, NV</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>L</td>\n",
+       "      <td>Sat, November 18</td>\n",
+       "      <td>10 - 16</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>LaVell Edwards Stadium - Provo, UT</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>W</td>\n",
+       "      <td>Sat, November 25</td>\n",
+       "      <td>30 - 20</td>\n",
+       "      <td>Hawai'i</td>\n",
+       "      <td>Aloha Stadium - Honolulu, HI</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>W</td>\n",
+       "      <td>Sat, September 1</td>\n",
+       "      <td>28 - 23</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Arizona Stadium - Tucson, AZ</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>L</td>\n",
-       "      <td>Sat, October 14</td>\n",
-       "      <td>0 - 49</td>\n",
-       "      <td>Utah</td>\n",
-       "      <td>Salt Lake City, UT</td>\n",
-       "      <td>1922</td>\n",
+       "      <td></td>\n",
+       "      <td>Sat, September 8</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>California</td>\n",
+       "      <td>LaVell Edwards Stadium - Provo, UT</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>L</td>\n",
-       "      <td>Tue, October 24</td>\n",
-       "      <td>0 - 47</td>\n",
-       "      <td>Colorado School of Mines</td>\n",
-       "      <td>Provo, UT</td>\n",
-       "      <td>1922</td>\n",
+       "      <td></td>\n",
+       "      <td>Sat, September 15</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Camp Randall Stadium - Madison, WI</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>W</td>\n",
-       "      <td>Tue, November 14</td>\n",
-       "      <td>7 - 0</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Provo, UT</td>\n",
-       "      <td>1922</td>\n",
+       "      <td></td>\n",
+       "      <td>Sat, September 22</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>McNeese St</td>\n",
+       "      <td>LaVell Edwards Stadium - Provo, UT</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>L</td>\n",
-       "      <td>Sat, November 25</td>\n",
-       "      <td>0 - 33</td>\n",
-       "      <td>Colorado St</td>\n",
-       "      <td>Fort Collins, CO</td>\n",
-       "      <td>1922</td>\n",
+       "      <td></td>\n",
+       "      <td>Sat, September 29</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Seattle, WA</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td>Fri, October 5</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Utah St</td>\n",
+       "      <td>Provo, UT</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, October 13</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Hawai'i</td>\n",
+       "      <td>Provo, UT</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, October 27</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Northern Illinois</td>\n",
+       "      <td>Provo, UT</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, November 3</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Boise St</td>\n",
+       "      <td>Boise, ID</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, November 10</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>Amherst, MA</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, November 17</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>New Mexico St</td>\n",
+       "      <td>Provo, UT</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td></td>\n",
+       "      <td>Sat, November 24</td>\n",
+       "      <td>0 - 0</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>Salt Lake City, UT</td>\n",
+       "      <td>2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  winloss              date   score                  opponent  \\\n",
-       "0       L    Sat, October 7  3 - 42                   Utah St   \n",
-       "1       L   Sat, October 14  0 - 49                      Utah   \n",
-       "2       L   Tue, October 24  0 - 47  Colorado School of Mines   \n",
-       "3       W  Tue, November 14   7 - 0                   Wyoming   \n",
-       "4       L  Sat, November 25  0 - 33               Colorado St   \n",
+       "   winloss               date    score           opponent  \\\n",
+       "5        L     Fri, October 6   7 - 24           Boise St   \n",
+       "6        L    Sat, October 14  10 - 35     Mississippi St   \n",
+       "7        L    Sat, October 21  17 - 33      East Carolina   \n",
+       "8        W    Sat, October 28  41 - 20        San Jose St   \n",
+       "9        L    Sat, November 4  13 - 20          Fresno St   \n",
+       "10       W   Fri, November 10  31 - 21               UNLV   \n",
+       "11       L   Sat, November 18  10 - 16      Massachusetts   \n",
+       "12       W   Sat, November 25  30 - 20            Hawai'i   \n",
+       "0        W   Sat, September 1  28 - 23            Arizona   \n",
+       "1            Sat, September 8    0 - 0         California   \n",
+       "2           Sat, September 15    0 - 0          Wisconsin   \n",
+       "3           Sat, September 22    0 - 0         McNeese St   \n",
+       "4           Sat, September 29    0 - 0         Washington   \n",
+       "5              Fri, October 5    0 - 0            Utah St   \n",
+       "6             Sat, October 13    0 - 0            Hawai'i   \n",
+       "7             Sat, October 27    0 - 0  Northern Illinois   \n",
+       "8             Sat, November 3    0 - 0           Boise St   \n",
+       "9            Sat, November 10    0 - 0      Massachusetts   \n",
+       "10           Sat, November 17    0 - 0      New Mexico St   \n",
+       "11           Sat, November 24    0 - 0               Utah   \n",
        "\n",
-       "             location  year  \n",
-       "0           Provo, UT  1922  \n",
-       "1  Salt Lake City, UT  1922  \n",
-       "2           Provo, UT  1922  \n",
-       "3           Provo, UT  1922  \n",
-       "4    Fort Collins, CO  1922  "
+       "                                  location  year  \n",
+       "5       LaVell Edwards Stadium - Provo, UT  2017  \n",
+       "6      Davis Wade Stadium - Starkville, MS  2017  \n",
+       "7   Dowdy-Ficklen Stadium - Greenville, NC  2017  \n",
+       "8       LaVell Edwards Stadium - Provo, UT  2017  \n",
+       "9        Bulldog Stadium (CA) - Fresno, CA  2017  \n",
+       "10        Sam Boyd Stadium - Las Vegas, NV  2017  \n",
+       "11      LaVell Edwards Stadium - Provo, UT  2017  \n",
+       "12            Aloha Stadium - Honolulu, HI  2017  \n",
+       "0             Arizona Stadium - Tucson, AZ  2018  \n",
+       "1       LaVell Edwards Stadium - Provo, UT  2018  \n",
+       "2       Camp Randall Stadium - Madison, WI  2018  \n",
+       "3       LaVell Edwards Stadium - Provo, UT  2018  \n",
+       "4                              Seattle, WA  2018  \n",
+       "5                                Provo, UT  2018  \n",
+       "6                                Provo, UT  2018  \n",
+       "7                                Provo, UT  2018  \n",
+       "8                                Boise, ID  2018  \n",
+       "9                              Amherst, MA  2018  \n",
+       "10                               Provo, UT  2018  \n",
+       "11                      Salt Lake City, UT  2018  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_years.head()"
+    "all_years.tail(20)"
    ]
   },
   {
